--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jventura10/bamazon#readme",
   "dependencies": {
     "inquirer": "^6.2.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "table": "^5.1.1"
   }
 }
